# Scaled-Object-detection

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  pyproject.toml  tox.ini
src/scaled_object_detection/pipeline/: main.py  rough.py
src/scaled_object_detection/pipeline/config/: config.py
src/scaled_object_detection/pipeline/service/: yolo_model.py
src/scaled_object_detection/utils/: mask_bw.py
