[project]
name = "Scaled-Object-detection"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rishavraj Mandal", email = ""},
]
dependencies = [
    "ultralytics>=8.2.70",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
